--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1462,10 +1462,10 @@ ul.cloud a:focus::before,
 }
 .features .nav-link {
   border: 0;
-  padding: 25px 20px;
+  padding: 1px 1px;
   color: var(--color-secondary);
-  box-shadow: 5px 5px 25px rgba(var(--color-secondary-rgb), 0.15);
-  border-radius: 0;
+  /* box-shadow: 5px 5px 25px rgba(var(--color-secondary-rgb), 0.15); */
+  /* border-radius: 0; */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1481,7 +1481,7 @@ ul.cloud a:focus::before,
 .features .nav-link h4 {
   font-size: 20px;
   font-weight: 600;
-  margin: 10px 0 0 0;
+  margin: 1px 0 0 0;
   color: var(--color-secondary);
 }
 .features .nav-link:hover {
@@ -1489,11 +1489,14 @@ ul.cloud a:focus::before,
 }
 .features .nav-link.active {
   transition: 0.3s;
-  background: #FFCA27;
-  border-color: var(--color-primary);
+  text-decoration-color: #000;
+  /* background: #FFCA27; */
+  /* background: #9e9e9e; */
+  /* border-color: var(--color-primary); */
 }
 .features .nav-link.active h4 {
-  color: var(--color-white);
+  color: #000;
+  border-bottom: 3px solid #FFCA27;
 }
 .features .nav-link.active i {
   color: var(--color-white) !important;
@@ -1706,6 +1709,7 @@ ul.cloud a:focus::before,
   border: 4px solid var(--color-white);
   border-radius: 10px;
   overflow: hidden;
+
 }
 .pricing .pricing-header {
   background: linear-gradient(rgba(var(--color-secondary-rgb), 0.9), rgba(var(--color-secondary-rgb), 0.9)), url("../img/pricing-bg.jpg") center center;
@@ -1733,6 +1737,7 @@ ul.cloud a:focus::before,
 .pricing h4 span {
   color: rgba(var(--color-white-rgb), 0.6);
   font-size: 24px;
+  text-align: center;
 }
 .pricing ul {
   padding: 30px 0;
@@ -1740,17 +1745,25 @@ ul.cloud a:focus::before,
   color: var(--color-gray);
   text-align: left;
   line-height: 20px;
+  text-align: center;
+  list-style-type: none !important;
 }
 .pricing ul li {
   padding: 10px 0;
   display: flex;
   align-items: center;
+  text-align: center;
+  justify-content: center;
+  list-style-type: none !important;
 }
 .pricing ul i {
   color: var(--color-primary);
   font-size: 36px;
   padding-right: 3px;
   line-height: 0;
+ text-align: center;
+ list-style: none;
+ list-style-type: none !important;
 }
 .pricing ul .na {
   color: rgba(var(--color-gray-rgb), 0.5);
