--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1694,7 +1694,7 @@ ul.cloud a:focus::before,
 }
 
 /*--------------------------------------------------------------
-# Pricing Section
+# Pricing Section update
 --------------------------------------------------------------*/
 .pricing {
   background: rgba(var(--color-secondary-rgb), 0.04);
